src/src/main/resources/css/OtherPlayers.css
#player3{
    -fx-background-image: url('../images/ui-images/otherPlayerHangingGardens.png');
    -fx-background-radius: 0;
    -fx-background-color: transparent;
}

#player4{
    -fx-background-image: url('../images/ui-images/otherPlayerHangingGardens.png');
    -fx-background-radius: 0;
    -fx-background-color: transparent;
}

#player5{
    -fx-background-image: url('../images/ui-images/otherPlayerHangingGardens.png');
    -fx-background-radius: 0;
    -fx-background-color: transparent;
}

#player6{
    -fx-background-image: url('../images/ui-images/otherPlayerHangingGardens.png');
    -fx-background-radius: 0;
    -fx-background-color: transparent;
}

#borderPane{
    -fx-background-image: url('../images/ui-images/ageImage.png');
    -fx-background-radius: 0;
    -fx-background-color: transparent;
}


#detailAnchor{
   /* -fx-background-image: url('../images/ui-images/detailBg.png'); */
}

#outerPane{
    -fx-background-color: transparent;
}

#topPane{
    /*-fx-background-color: yellow;*/

}

#closeButton{
    -fx-background-image: url('../images/ui-images/closeButton.png');
    -fx-background-radius: 0;
    -fx-background-color: transparent;
}

#playerNameLabel .text {
    -fx-fill: white;
    -fx-stroke: black;
    -fx-stroke-width: 1px;
}

